# Renewable-Energy-Credit-Marketplace

./: .gitignore  Cargo.toml  README.md  build_output.txt  build_output_v2.txt  build_output_v3.txt  package-lock.json  package.json
.github/workflows/: ci.yml
contracts/rec_marketplace/: Cargo.toml
contracts/rec_marketplace/src/: access.rs  errors.rs  events.rs  lib.rs  storage.rs  tests.rs  types.rs
contracts/rec_registry/: Cargo.toml
contracts/rec_registry/src/: lib.rs
scripts/: deploy.ps1
src/app/: globals.css  layout.tsx  page.tsx
src/app/activity/: page.tsx
src/app/analytics/: page.tsx
src/app/dashboard/: page.tsx
src/app/marketplace/: page.tsx
src/app/settings/: page.tsx
src/app/transactions/: page.tsx
src/components/layout/: AppShell.tsx
src/components/marketplace/: FilterBar.tsx
src/components/producer/: RegisterProducerModal.tsx
src/components/providers/: Providers.tsx
src/components/rec/: IssueRECModal.tsx  RECCard.tsx
src/components/ui/: StatsCard.tsx
src/components/wallet/: WalletButton.tsx  WalletConnect.tsx
src/hooks/: useContractEvents.ts  useProducer.ts  useREC.ts  useWallet.ts
src/lib/: config.ts  contracts.ts  logger.ts  types.ts  utils.ts
src/store/: index.ts
