[package]
name = "rec_marketplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
soroban-sdk = { version = "21.7.6", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils", "alloc"] }
